feat: apply clean architecture, with sqlite db (#4)
